--- a/index.html
+++ b/index.html
@@ -45,23 +45,23 @@
       <div class="ui-grid-a">
     			<div class="ui-block-a"> 
               <div>
-              <button id="fanUp" onclick="sendFanspeed(1)" class="button"><img src="assets/arrow_up.png"></button>
+              <button id="fanUp" onclick="sendFanspeed(1)" class="button"><img src="arrow_up.png"></button>
               <div id="fanSpeed" name="fanSpeed" class="label"></div>
-              <button id="fanDown" onclick="sendFanspeed(0)" class="button"><img src="assets/arrow_down.png"></button>
+              <button id="fanDown" onclick="sendFanspeed(0)" class="button"><img src="arrow_down.png"></button>
               </div>
     		    </div>
     		  <div class="ui-block-b">
               <div>
-                  <button id="tempUp" onclick="sendTemp(1)" class="button"><img src="assets/red_arrow_up.png"></button>
+                  <button id="tempUp" onclick="sendTemp(1)" class="button"><img src="red_arrow_up.png"></button>
                   <div id="temp" name="temp" class="label"></div>
-                  <button id="tempDown" onclick="sendTemp(0)" class="button"><img src="assets/blue_arrow_down.png"></button>
+                  <button id="tempDown" onclick="sendTemp(0)" class="button"><img src="blue_arrow_down.png"></button>
               </div>  
           </div>
           <div class="ui-block-a">
               <button id="ac" onclick="sendAC()" class="btnAC">A/C</button>
           </div>
           <div class="ui-block-b">
-              <button id="recirc" onclick="sendRecirc()" class="btnRecirc"><img src="assets/recirc.png"></button>
+              <button id="recirc" onclick="sendRecirc()" class="btnRecirc"><img src="recirc.png"></button>
           </div>
       </div>
 
@@ -86,13 +86,13 @@
 
       <div class="ui-grid-b">
               <div class="ui-block-a">
-                    <button id="seekBackward" onclick="sendStation(0)" class="tune"><img src="assets/seek-backward.png"></button>
+                    <button id="seekBackward" onclick="sendStation(0)" class="tune"><img src="seek-backward.png"></button>
               </div>
               <div class="ui-block-b"> 
                     <div id="station" name="station" class="label" style="transform: translateY(+50%)"></div>
               </div>
               <div class="ui-block-c">
-                  <button id="seekForward" onclick="sendStation(1)" class="tune"><img src="assets/seek-forward.png"></button>
+                  <button id="seekForward" onclick="sendStation(1)" class="tune"><img src="seek-forward.png"></button>
               </div>
       </div>
 
