--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <div data-role="page">
     <!-- logo -->
-    <div data-role="ford-logo" id="header" class="ford-logo"><img src="fordLogo.png" height=80px width=200px></div>
+    <div data-role="ford-logo" id="header" class="ford-logo"><img src="fordLogo.png"></div>
     <noscript>Please install JavaScript support to use this application!</noscript>
 
     <!-- login section -->
