remove error of pairing withotu secret

--- a/index.html
+++ b/index.html
@@ -39,8 +39,11 @@
           </p>
     			<button id="chooseCar" style="display:none" onclick="chooseCar()" class="btn btn-lg btn-success">Choose Car</button>
     		  </p>
-    		  
     		</p>
+    </div>
+
+    <div id="waiting" style="display:none">
+        <h3 class="status"> Waiting for driver to accept... </h3>
     </div>
 
     <!-- commands -->
