fix connecting bugs

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <!-- commands -->
 		<div id="command" style="display:none">
-        <button id="disconnectCar" style="display:none" onclick="disconnectPassenger()">Disembark Car</button>
+      <!-- <button id="disconnectCar" style="display:none" onclick="disconnectPassenger()">Disembark Car</button> -->
 			
       <div class="ui-grid-a">
     			<div class="ui-block-a"> 
