modifying for chat

--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
       </div>
       <div data-role="main" class="ui-content">
           <div id="chatlog"></div>
+              <table id="chatTable" style="width:100%">
 
+              </table>
           <div>
               <form action="sendMessage()">
                 <input id="chatbox" value="Chat here">
