--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
   <script src="Firebase.js"></script>
 
-  <script>
+  <script type="text/JavaScript">
   function getURLParameter(sParam)
   {
       var sPageURL = window.location.search.substring(1);
