--- a/index.html
+++ b/index.html
@@ -12,10 +12,31 @@
 	<script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
   <script src="Firebase.js"></script>
 
+  <script type="text/JavaScript">
+  function getURLParameter(sParam)
+  {
+      var sPageURL = window.location.search.substring(1);
+      var sURLVariables = sPageURL.split('&');
+      for (var i = 0; i < sURLVariables.length; i++) 
+      {
+          var sParameterName = sURLVariables[i].split('=');
+          if (sParameterName[0] == sParam) 
+          {
+              return sParameterName[1];
+          }
+      }
+  }​
+
+  function loadStuff(){
+      param = getURLParameter('carkey');
+      chooseCar(param
+  }
+  </script>
+
   <title> SDL Rider</title>
 </head>
 
-<body onload="chooseCar(getURLParameter('carkey'))">
+<body onload="loadStuff()">
 
 
 <div data-role="page">
