--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
               </table>
           <div>
-              <form action="sendMessage()">
+              <form action="sendChat()">
                 <input id="chatbox" value="Chat here">
                 <input id="sendChat" type="submit" value="Send"><br><br>
               </form>
