--- a/index.html
+++ b/index.html
@@ -72,10 +72,11 @@
 
               </table>
           <div>
-              <form action="sendChat()">
+              <!-- <form action="sendChat()"> -->
                 <input id="chatbox" value="Chat here">
-                <input id="sendChat" type="submit" value="Send"><br><br>
-              </form>
+                <button id="sendChat" onclick="sendChat()">Send</button>
+                <!-- <input id="sendChat" type="submit" value="Send"><br><br> -->
+              <!-- </form> -->
           </div>
       </div>
     </div>
