--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
  -->
     <div id="chat">
       <div data-role="header">
-        <h1>Chat with your Driver</h1>
+        <h1>Chat</h1>
       </div>
       <div data-role="main" class="ui-content">
           <div id="chatlog"></div>
